[package]
name = "darwaza"
description = "A simple reverse proxy with focus on OpenID Connect protocol"
version = "0.1.0"
license = "AGPL-3.0"
readme = "README.md"
authors = ["Amanjeev Sethi <aj@amanjeev.com>"]
edition = "2018"

[dependencies]
futures = "0.3.0"
async-std = "1.5.0"
surf = "1.0.3"

[[bin]]
name = "darwaza"
path = "src/main.rs"