[package]
name = "darwaza"
description = "A simple reverse proxy with focus on OpenID Connect protocol"
version = "0.1.0"
license = "AGPL-3.0"
readme = "README.md"
authors = ["Amanjeev Sethi <aj@amanjeev.com>"]
edition = "2018"

[dependencies]
async-std = "1.5.0"
surf = "1.0.3"
tide = "0.6.0"
url = "2.1.1"
log = "0.4.8"
http = "0.1.21"

[[bin]]
name = "darwaza"
path = "src/main.rs"