[package]
name = "darwaza"
description = "A simple reverse proxy with focus on OpenID Connect protocol"
version = "0.1.0"
license = "AGPL-3.0"
readme = "README.md"
authors = ["Amanjeev Sethi <aj@amanjeev.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1.0.1", features = ["unstable"] }

tide = "0.6.0"

surf = "= 2.0.0-alpha.0"
http = "0.1.17"
http-client = { version = "1.1.0", features = ["native_client"] }

url = "2.0.0"
log = "0.4.8"


[[bin]]
name = "darwaza"
path = "src/main.rs"